--- a/partials/driver.html
+++ b/partials/driver.html
@@ -3,16 +3,16 @@
   <nav id="secondary" class="main-nav">
     <div class="driver-picture">
       <div class="avatar">
-				<img ng-show="driver" src="img/avatar.png">
+				<!-- <img ng-show="driver" src="img/avatar.png"> -->
         <!-- <img ng-show="driver" src="img/drivers/{{driver.Driver.driverId}}.png" /> -->
         <br/>
-        {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
+        <h1>{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}</h1>
       </div>
     </div>
     <div class="driver-status">
-      Country: {{driver.Driver.nationality}}&nbsp;&nbsp;<img ng-show="driver" src="img/flags/{{driver.Driver.nationality}}.png"/><br/>
+      Nationality: {{driver.Driver.nationality}}&nbsp;&nbsp;<img ng-show="driver" src="img/flags/{{driver.Driver.nationality}}.png"/><br/>
       Team: {{driver.Constructors[0].name}}<br/>
-      Birth: {{driver.Driver.dateOfBirth}}<br/>
+      Birth: {{driver.Driver.dateOfBirth | date:'MMMM dd, yyyy'}}<br/>
       <a href="{{driver.Driver.url}}" target="_blank">Biography</a>
     </div>
   </nav>
@@ -20,7 +20,7 @@
   <div class="main-content">
     <table class="result-table table table-hover table-condensed ">
       <thead>
-        <tr><th colspan="5">Formula 1 {{season}} Results</th></tr>
+        <tr><th colspan="5"><h4>Formula 1 {{season}} Results</h4></th></tr>
       </thead>
       <tbody>
         <tr>
@@ -28,8 +28,14 @@
         </tr>
         <tr ng-repeat="race in races">
           <td>{{race.round}}</td>
-          <td><img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;{{race.raceName}}</td>
-          <td>{{race.Results[0].Constructor.name}}</td>
+          <td><img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;
+          <a href="#/{{race.season}}/race/{{race.Circuit.circuitId}}">
+          {{race.raceName}}</td>
+          </a>
+          <td>
+            <a href=" ">
+             <a href="#/{{race.season}}/constructor/{{race.Results[0].Constructor.constructorId}}">
+            {{race.Results[0].Constructor.name}}</a></td>
           <td>{{race.Results[0].grid}}</td>
           <td>{{race.Results[0].position}}</td>
         </tr>
