--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -10,10 +10,14 @@
     <td>
       <img src="img/flags/{{driver.Driver.nationality}}.png" />&nbsp;&nbsp;
       <a href="#/{{standingsTable.season}}/drivers/{{driver.Driver.driverId}}">
-	  	{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-	  </a>
+	  	  {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
+	    </a>
 	</td>
-    <td>{{driver.Constructors[0].name}}</td>
+    <td>
+       <a href="#/{{standingsTable.season}}/constructor/{{driver.Constructors[0].constructorId}}">
+        {{driver.Constructors[0].name}}
+      </a>
+    </td>
     <td>{{driver.points}}</td>
   </tr>
 </tbody>
