--- a/partials/driver.html
+++ b/partials/driver.html
@@ -1,46 +1,43 @@
-<section id="main">
-<div style="margin-top:40px;">
-  <nav id="secondary" class="main-nav">
-    <div class="driver-picture">
-      <div class="avatar">
-				<!-- <img ng-show="driver" src="img/avatar.png"> -->
-        <!-- <img ng-show="driver" src="img/drivers/{{driver.Driver.driverId}}.png" /> -->
-        <br/>
-        <h1>{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}</h1>
+<div ng-include src="'partials/nav.html'"></div>
+<div class="container">
+  <section id="main">
+  <div style="">
+    
+          <h1>{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}</h1>
+      
+     
+      <div class="driver-status">
+        Nationality: {{driver.Driver.nationality}}&nbsp;&nbsp;<img ng-show="driver" src="img/flags/{{driver.Driver.nationality}}.png"/><br/>
+        Team: {{driver.Constructors[0].name}}<br/>
+        Birth: {{driver.Driver.dateOfBirth | date:'MMMM dd, yyyy'}}<br/>
+        <a href="{{driver.Driver.url}}" target="_blank">Biography</a>
       </div>
-    </div>
-    <div class="driver-status">
-      Nationality: {{driver.Driver.nationality}}&nbsp;&nbsp;<img ng-show="driver" src="img/flags/{{driver.Driver.nationality}}.png"/><br/>
-      Team: {{driver.Constructors[0].name}}<br/>
-      Birth: {{driver.Driver.dateOfBirth | date:'MMMM dd, yyyy'}}<br/>
-      <a href="{{driver.Driver.url}}" target="_blank">Biography</a>
-    </div>
-  </nav>
-</div>
-  <div class="main-content">
-    <table class="result-table table table-hover table-condensed ">
-      <thead>
-        <tr><th colspan="5"><h4>Formula 1 {{season}} Results</h4></th></tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Round</td> <td>Grand Prix</td> <td>Team</td> <td>Grid</td> <td>Race</td>
-        </tr>
-        <tr ng-repeat="race in races">
-          <td>{{race.round}}</td>
-          <td><img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;
-          <a href="#/{{race.season}}/races/{{race.round}}">
-          {{race.raceName}}</td>
-          </a>
-          <td>
-            <a href=" ">
-             <a href="#/{{race.season}}/constructor/{{race.Results[0].Constructor.constructorId}}">
-            {{race.Results[0].Constructor.name}}</a></td>
-          <td>{{race.Results[0].grid}}</td>
-          <td>{{race.Results[0].position}}</td>
-        </tr>
-      </tbody>
-    </table>
   </div>
+    <div class="main-content">
+      <table class="result-table table table-hover table-condensed ">
+        <thead>
+          <tr><th colspan="5"><h4>Formula 1 {{season}} Results</h4></th></tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Round</td> <td>Grand Prix</td> <td>Team</td> <td>Grid</td> <td>Race</td>
+          </tr>
+          <tr ng-repeat="race in races">
+            <td>{{race.round}}</td>
+            <td><img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;
+            <a href="#/{{race.season}}/races/{{race.round}}">
+            {{race.raceName}}</td>
+            </a>
+            <td>
+              <a href=" ">
+               <a href="#/{{race.season}}/constructor/{{race.Results[0].Constructor.constructorId}}">
+              {{race.Results[0].Constructor.name}}</a></td>
+            <td>{{race.Results[0].grid}}</td>
+            <td>{{race.Results[0].position}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-</section>
+  </section>
+</div>
