--- a/partials/races.html
+++ b/partials/races.html
@@ -1,26 +1,29 @@
-<table class="table table-hover table-condensed ">
-<thead>
-  <tr><th colspan="4"><h4>{{raceTable.season}} Race Schedule</h4></th></tr>
-  <tr><th>Number</th><th>Race Name</th><th>Circuit Name</th><th>Location</th><th>Date</th><th>Start Time (Local)</th>
-</thead>
-<tbody>
-  <tr ng-repeat="race in racesList | filter: searchFilter">
-    <td>{{race.round}}</td>
-    <td>
-      <a href="#/{{race.season}}/races/{{race.round}}">
-	  	<img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;{{race.raceName}}
-  	  </a>
-	  </td>
-    <td>
-      <a href="{{race.Circuit.url}}" target="_blank">
-        {{race.Circuit.circuitName}}
-      </a>
-    </td>
-    <td>
-      {{race.Circuit.Location.locality}}, {{race.Circuit.Location.country}}
-    </td>
-    <td>{{race.date + 'T' +race.time| date: 'MM.dd'}}</td>
-    <td>{{race.date +'T'+race.time | date: 'hh:mm a'}}</td>
-  </tr>
-</tbody>
-</table>
+<div ng-include src="'partials/nav.html'"></div>
+<div class="container">
+  <table class="table table-hover table-condensed ">
+  <thead>
+    <tr><th colspan="4"><h3>{{raceTable.season}} Race Schedule</h3></th></tr>
+    <tr><th>Number</th><th>Race Name</th><th>Circuit Name</th><th>Location</th><th>Date</th><th>Start Time (Local)</th>
+  </thead>
+  <tbody>
+    <tr ng-repeat="race in racesList | filter: searchFilter">
+      <td>{{race.round}}</td>
+      <td>
+        <a href="#/{{race.season}}/races/{{race.round}}">
+  	  	<img  src="img/flags/{{race.Circuit.Location.country}}.png" />&nbsp;&nbsp;{{race.raceName}}
+    	  </a>
+  	  </td>
+      <td>
+        <a href="{{race.Circuit.url}}" target="_blank">
+          {{race.Circuit.circuitName}}
+        </a>
+      </td>
+      <td>
+        {{race.Circuit.Location.locality}}, {{race.Circuit.Location.country}}
+      </td>
+      <td>{{race.date + 'T' +race.time| date: 'MM.dd'}}</td>
+      <td>{{race.date +'T'+race.time | date: 'hh:mm a'}}</td>
+    </tr>
+  </tbody>
+  </table>
+</div>
