More small fixes, default homepage to 2014

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -15,15 +15,16 @@
         <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Selected Season: <span ng-bind="season"></span><span class="caret"></span></button>
         <span class="dropdown-arrow"></span>
         <ul class="dropdown-menu" role="menu" style="overflow-y: auto; min-height: 108px; max-height: 436px;" >
-          <li ng-repeat="s in seasonsList |orderBy: 'season':true"><a href="#/{{s.season}}/drivers/" ng-model="selectedSeason">{{s.season}}</a></li>
+          <li ng-repeat="s in seasonsList |orderBy: 'season':true"><a href="#/{{s.season}}/races/" ng-model="selectedSeason">{{s.season}}</a></li>
         </ul>
       </div>
     </form>
     <div class="collapse navbar-collapse" id="navbar-collapse-01">
       <ul class="nav navbar-nav">           
+      
+        <li class="active"><a href="#/{{season}}/races">Race Schedule</a></li>
         <li class="active"><a href="#/{{season}}/drivers"></span>Drivers</a></li>
         <li class="active"><a href="#/{{season}}/constructors"></span>Constructors</a></li>
-        <li class="active"><a href="#/{{season}}/races">Race Schedule</a></li>
 
       </ul>  
     </div>
