--- a/partials/race.html
+++ b/partials/race.html
@@ -1,30 +1,33 @@
 <div ng-include src="'partials/nav.html'"></div>
 <div class="container" >
    <h1>{{race.raceName}}&nbsp;{{race.season}}</h1>
-   <h4>Round {{race.round}}: {{race.Circuit.Location.locality}}, {{race.Circuit.Location.country}}&nbsp;&nbsp;<img src="img/flags/{{race.Circuit.Location.country}}.png" /></h4>
-    <div class="driver-status"ng-model="race">
+   <h4 ng-if="race">Round {{race.round}}: {{race.Circuit.circuitName}}  :  <a href="{{race.Circuit.url}}" target="_blank">
+           Wikipedia</a><br> {{race.Circuit.Location.locality}}, {{race.Circuit.Location.country}}&nbsp;&nbsp;<img src="img/flags/{{race.Circuit.Location.country}}.png" /><br></h4>
+      <span ng-if="race.date">{{race.date | date: 'MMMM dd, yyyy'}}<br></span>
+      <span ng-if="race.time">Start Time in Your Timezone: {{race.date +'T'+race.time | date: 'MMMM dd, hh:mm a Z'}}<br></span>
+    </h4>
     <map ng-if="race" center="[{{race.Circuit.Location.lat}}, {{race.Circuit.Location.long}}]" zoom="13" style="display:block;height:300px">
-
-
-        <marker position="[{{race.Circuit.Location.lat}}, {{race.Circuit.Location.long}}]"></marker><br>
-      </map>
-       
-        Date: {{race.date + 'T' +race.time| date: 'MMMM dd, yyyy'}}<br>
-        Start Time: {{race.date +'T'+race.time | date: 'hh:mm a'}}<br>
-        Wikipedia:  <a href="{{race.Circuit.url}}" target="_blank">
-           URL
-        </a><br/>
-        
+      <marker position="[{{race.Circuit.Location.lat}}, {{race.Circuit.Location.long}}]"></marker><br>
+    </map>
+    <br>
+    <div class="row">
+      <div ng-hide="showResults">
+        <a href ng-click="showResults = !showResults" class="btn btn-primary btn-lg">Show Race Results</a>
       </div>
-      
-      <table class="table table-hover table-condensed ">
+      <div ng-show="showResults">
+        <a href ng-click="showResults = !showResults" class="btn btn-primary btn-lg">Hide Race Results</a>
+      </div>
+    </div>
+    <br>
+    <table class="table table-hover table-condensed " class="img-responsive img-thumbnail" ng-show="showResults">
   <thead>
 
 
 
 
-    <tr><th>Result</th><th>Driver</th><th>Constructor</th><th>Points</th><th>Time</th><th>Fastest Lap</th><th>Status</th>
+  <tr><th>Result</th><th>Driver</th><th>Constructor</th><th>Points</th><th>Time</th><th>Fastest Lap</th><th>Status</th>
   </thead>
+
   <tbody>
     <tr ng-repeat="results in race.Results | filter: searchFilter">
       <td>{{results.position}}</td>
